<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/user_register"
        android:textSize="35dp"
        />
    <!-- 用户名布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="70dp"
            android:text="@string/user_name"
            android:gravity="right"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/newusername_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="90dp"
            android:layout_weight="2"
            android:background="@drawable/edittext_background"
            android:hint="@string/input_user_name"
            android:maxLines="1"
            android:padding="8dp" />

    </LinearLayout>

    <!--密码布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="70dp"
            android:text="@string/password"
            android:gravity="right"
            android:textSize="20dp"/>

        <EditText
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/newpassword_text"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="90dp"
            android:maxLines="1"
            android:hint="@string/input_password"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"/>
    </LinearLayout>
    <!-- 再次确认密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:text="@string/ensure_password"
            android:textSize="20dp" />

        <EditText
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/new_again_password_text"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="90dp"
            android:maxLines="1"
            android:hint="@string/input_password_2"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"/>

    </LinearLayout>
    <CheckBox
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_password_checkbook"
        android:layout_marginLeft="220dp"
        android:checked="false"
        android:text="显示密码"
        android:textSize="12dp"
        />
    <!--注册以及返回按钮子布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp">

        <!-- 注册按钮-->
        <Button
            android:id="@+id/yes_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"

            android:backgroundTint="@color/black"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="@string/register"/>
        <!--返回按钮-->
        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:backgroundTint="@color/black"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="@string/return1"/>
    </LinearLayout>

    <ImageView
        android:layout_width="68dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:src="@drawable/book" />
</LinearLayout>