<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_book"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:backgroundTint="@color/black"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/Borrow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrow_book"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:backgroundTint="@color/black"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/alter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_book"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:backgroundTint="@color/black"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:backgroundTint="@color/black"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/reader_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reader_check"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:backgroundTint="@color/black"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

</LinearLayout>