<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">
    <!-- 应用名字-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/system_name"
        android:textSize="30dp"/>
    <!-- 应用图片-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/book"/>
    <!-- 用户名布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="70dp"
            android:text="@string/user_name"
            android:gravity="center"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/username_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="90dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/input_user_name"
            android:maxLines="1"
            android:padding="8dp"/>
    </LinearLayout>
    <!-- 密码布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="70dp"
            android:text="@string/password"
            android:gravity="center"
            android:textSize="20dp"/>

        <EditText
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/password_text"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="90dp"
            android:maxLines="1"
            android:hint="@string/input_password"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"/>
    </LinearLayout>
    <!-- 记住密码布局-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_text"
            android:layout_marginLeft="90dp"
            android:checked="false"
            android:text="@string/remember_password"
            android:textSize="12dp"/>
        <CheckBox
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_checkbook"
            android:layout_marginLeft="70dp"
            android:checked="false"
            android:text="@string/show_password"
            android:textSize="12dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp">

        <!--注册按钮-->
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"

            android:backgroundTint="#000000"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="注册"/>
        <!--登录按钮-->
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:backgroundTint="#000000"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="登录"/>
    </LinearLayout>

</LinearLayout>