<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edittext_background"
    android:backgroundTint="@color/white">

    <!--    书籍名称子布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/book_name"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/add_book_name_edit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.7"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_background"
            android:layout_gravity="center"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- 书籍分类子布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/book_kind"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/add_book_kind_edit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.7"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_background"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:maxLines="5" />
    </LinearLayout>
    <!--    书籍作者子布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/book_writer"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/add_book_writer_edit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.7"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_background"
            android:layout_gravity="center"
            android:textColor="@color/black" />
    </LinearLayout>


    <!-- 书籍金额子布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/book_money"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/add_book_money_edit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.7"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_background"
            android:layout_gravity="center"
            android:textColor="@color/black" />
    </LinearLayout>



    <!-- 确定以及取消按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <!-- 确定按钮-->
        <Button
            android:id="@+id/add_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/black"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:text="@string/ensure"/>
        <!--取消按钮-->
        <Button
            android:id="@+id/add_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>